<resources>
    <string name="app_name">相对</string>
    <string name="welcome">welcome</string>
    <string name="ad">广告</string>
    <string name="guide">引导</string>
    <string name="home">主页</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>
    <string name="next">下一步</string>
    <string name="txt_next_agree">点击下一步 即代表已阅读并同意“相对”</string>
    <string name="txt_user_protocol">用户协议及隐私条款</string>
    <string name="plus_86">+86</string>
    <string name="please_enter_phone_number">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="use_sms_login">使用验证码登录</string>
    <string name="cannot_login">遇到问题无法登陆</string>
    <string name="use_password_login">使用密码登录</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="please_input_sms_code">请输验证码</string>
    <string name="please_set_password">请设置密码，长度6~12位</string>
    <string name="icon">icon</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="improve_information">完善个人资料</string>
    <string name="bg">背景</string>
    <string name="upload_avatar">点击上传头像</string>
    <string name="improve_information_open_os">请完善以上信息后即可开启相对</string>
    <string name="open_os">开启相对</string>
    <string name="avatar">头像</string>
    <string name="birth_day">出生日期</string>
    <string name="input_nickname">输入昵称</string>
    <string name="please_input_nickname">请输你的昵称</string>
    <string name="please_pick_you_birthday">请选择你的出生日期</string>
    <string name="register">注册</string>
    <string name="get_user_info_fail">获取用户信息失败</string>
    <string name="redo_get">重新获取</string>
    <string name="search">搜索</string>
    <string name="people_are_meeting">人在相对</string>
    <string name="_1234">1234</string>
    <string name="_10_yuan">￥10</string>
    <string name="beef_noodles">牛肉面</string>
    <string name="_0">0</string>
    <string name="user">用户</string>
    <string name="school">学校</string>
    <string name="job">职业</string>
    <string name="block_report">拉黑举报</string>
    <string name="sitting">占位</string>
    <string name="place_and_friends">地点、好友</string>
    <string name="hangzhou">杭州</string>
    <string name="album">相册</string>
    <string name="story">故事</string>
    <string name="_20_yuan">￥20</string>
    <string name="store">商店</string>
    <string name="_127_km">127km</string>
    <string name="this_is_introduce">this is introduce</string>
    <string name="_99">99</string>
    <string name="_20">20</string>
    <string name="update_info">编辑资料</string>
    <string name="sentence_example">纵然伤心，也不要愁眉不展，因为你不知是谁会爱上你的笑容。</string>
    <string name="_2018_01_01">2018–01–01</string>
    <string name="person">个人</string>
    <string name="setting">设置</string>
    <string name="save">保存</string>
    <string name="update_avatar">更换头像</string>
    <string name="validate_your_account">认证您的账号</string>
    <string name="about_me">关于我</string>
    <string name="company">公司</string>
    <string name="birthday">生日</string>
    <string name="name">名字</string>
    <string name="add_company">添加公司</string>
    <string name="add_school">添加学校</string>
    <string name="add_job">添加职业</string>
    <string name="self_introduction">介绍一下自己吧~~</string>
    <string name="_50">50</string>
    <string name="add_friends">加好友</string>
    <string name="wallet">钱包</string>
    <string name="store_wallet">商店钱包</string>
    <string name="favor">收藏</string>
    <string name="place">地点</string>
    <string name="os_distance">相对距离</string>
    <string name="_50_km">50km</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="_18_to_38">18–38</string>
    <string name="male">男</string>
    <string name="unlimited">不限</string>
    <string name="female">女</string>
    <string name="account_manager">账号管理</string>
    <string name="change_language">切换语言</string>
    <string name="privacy_setting">隐私设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="call_os">联系相对</string>
    <string name="share_os">分享相对</string>
    <string name="logout_2">退出登录</string>
    <string name="trends">动态</string>
    <string name="are_meeting_now">正在相对</string>
    <string name="conversation">对话</string>
    <string name="os_invite">相对邀请</string>
    <string name="receive">收到</string>
    <string name="invite_num">个邀请</string>
    <string name="invite_list">邀请列表</string>
    <string name="visiting_card">名片</string>
    <string name="trade">订单</string>
    <string name="no_os">您没有正在相对！前往相对。</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="you_not_be_invite">您还没有被邀请</string>
    <string name="success_create_match">成功创建相对</string>
    <string name="image">image</string>
    <string name="goods_how_use">不可叠加 | 过期自动退 | 随时退 | 免预约</string>
    <string name="goods_when_use">此商品需双方到店打卡使用</string>
    <string name="goods">商品</string>
    <string name="buy">购买</string>
    <string name="goods_need_some">相对商品需双方到店打卡使用 \n若双方同时兑换成功，可返现10元</string>
    <string name="number">数量</string>
    <string name="sum">总计</string>
    <string name="no_goods">暂无商品！</string>
    <string name="need_known">须知：</string>
    <string name="pay">支付</string>
    <string name="remain">余额</string>
    <string name="yuan">￥</string>
    <string name="withdraw">提现</string>
    <string name="_10">10</string>
    <string name="_0_yuan">￥0</string>
    <string name="trade_core">相对订单中心</string>
    <string name="goods_sum_price">商品总价：</string>
    <string name="trade_message">订单信息</string>
    <string name="trade_number_is">订单编号：</string>
    <string name="trade_time_is">下单时间：</string>
    <string name="buy_count_is">购买数量：</string>
    <string name="os">相对</string>
    <string name="my_os">我的相对</string>
    <string name="add_be_friends">加为好友</string>
    <string name="send_message">发送消息</string>
    <string name="have">有</string>
    <string name="user_and_place">地点、好友</string>
    <string name="agree">同意</string>
    <string name="already_add">已加</string>
    <string name="refuse">拒绝</string>
    <string name="delete">删除</string>
    <string name="new_friends">新好友</string>
    <string name="my_friends">我的好友</string>
    <string name="invite_friends_match">邀请好友相对</string>\
    <string name="invite_friends">邀请好友</string>
    <string name="send">发送</string>
    <string name="scan_and_be_friends">扫码成为相对好友</string>
    <string name="add_me_on_os">Add me on OS</string>
    <string name="save_album">保存到相册</string>
    <string name="scan_card">扫描名片</string>
    <string name="invite_success">邀请成功！</string>
    <string name="please_choose_sex">请选择性别！</string>
    <string name="name_length_1_10_char">昵称长度1~10个字符！</string>
    <string name="pop_birthday">请完善生日！</string>
    <string name="choose_avatar">请选择头像！</string>
    <string name="length_can_not_over_10">长度不能超过10</string>
    <string name="choose_in_album">相册中选取</string>
    <string name="please_choose">请选择！</string>
    <string name="rec_2d_code">识别二维码:</string>
    <string name="can_not_rec_2d_code">未能识别二维码！</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_use">待使用</string>
    <string name="pay_back">退款</string>
    <string name="report">举报</string>
    <string name="block">拉黑</string>
    <string name="all">全部</string>
    <string name="income">收入</string>
    <string name="expend">支出</string>
    <string name="tx_je_not_blow_0_01">提现余额需不少于0.01￥！</string>
    <string name="tip">提示</string>
    <string name="input_alipay_account">请输入支付宝账号：</string>
    <string name="submit">提交</string>
    <string name="alipay_account_can_not_empty">支付宝账号不能为空！</string>
    <string name="tx_je">请提现金额：</string>
    <string name="ye_bz">余额不足！</string>
    <string name="tx_je_can_not_blow_0_01">提现金额需不少于0.1￥！</string>
    <string name="register_os_place">注册相对地点</string>
    <string name="cant_register">等级不够，无法注册！</string>
    <string name="he_invite_before">对方已经邀请过你，是否接受？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="warm">警告</string>
    <string name="delete_this_friend">删除这位好友？</string>
    <string name="can_not_login_please_call_dev">不能登录，请联系开发商。</string>
    <string name="zone_code">区号</string>
    <string name="user_protocol">这是用户协议</string>
    <string name="location_fail">定位失败:</string>
    <string name="no_permission">没有申请权限</string>
    <string name="not_installed_amap">没有安装高德地图</string>
    <string name="delete_this_photo">删除这张照片？</string>
    <string name="greet_to_new_friend">向新朋友问候</string>
    <string name="please_pop_user_info">用户信息不完整，请完善信息！</string>
    <string name="tx_success">提现成功！</string>
    <string name="save_success">保存成功！</string>
    <string name="save_fail">保存失败！</string>
    <string name="apply_success">申请成功！</string>
    <string name="update_info_success">修改信息成功!</string>
    <string name="logout_success">登出成功！</string>
    <string name="pop_info_success">完善信息成功!</string>
    <string name="user_info_not_complete_please_pop_info">用户信息不完整，请完善信息！</string>
    <string name="register_success_please_pop_info">注册成功：请完善信息！</string>
    <string name="login_success">登录成功!</string>
    <string name="account_not_exist_please_register">账号不存在，先注册！</string>
    <string name="account_exist_please_login">账号已存在，请登录！</string>
    <string name="confirm_time">确定时间</string>
    <string name="punch_card">打卡</string>
    <string name="write_story">发布故事</string>
    <string name="send_meet_time">发送相对时间</string>
    <string name="meet_was_cancel">相对已取消</string>
    <string name="meet_was_finish">相对已结束</string>
    <string name="report_success">举报成功！</string>
    <string name="block_success">拉黑成功！</string>
    <string name="report_reason">填写举报原因</string>
    <string name="block_this_user">拉黑该用户？</string>
    <string name="send_os_invite">发送相对邀请</string>
    <string name="invite_os">邀请相对！</string>
    <string name="accept_invite">接受邀请</string>
    <string name="block_list">黑名单</string>
    <string name="use_protocol">使用协议</string>
    <string name="clear_cache_ok">已清除缓存</string>
    <string name="open_time">营业时间</string>
    <string name="open_amap">打开高德</string>
    <string name="is_cancel_os">确定取消同行？</string>
    <string name="cancel_os">取消同行</string>
    <string name="refresh">刷新</string>
    <string name="remove_block">移除黑名单</string>
    <string name="by_system">跟随系统</string>
    <string name="account">账号</string>
    <string name="update_password">修改密码</string>
    <string name="bind_wechat">绑定微信</string>
    <string name="no_bind">未绑定</string>
    <string name="update_password_success">修改密码成功</string>
    <string name="input_new_password">请输入新密码，长度6~12位</string>
    <string name="confirm_new_password">请重新确认新密码</string>
    <string name="password_length_wrong">密码长度不符合</string>
    <string name="confirm_wrong">确认错误，请从新确认密码</string>
    <string name="about_us">关于我们</string>
    <string name="qq_group">官方QQ群：907873954</string>
    <string name="copy_right">copy right@2018–2019</string>
    <string name="os_company">杭州一川网络科技有限公司</string>
    <string name="os_now">正在相对</string>
    <string name="os_history">相对历史</string>
    <string name="invite">邀请</string>
    <string name="so_now">正在相对</string>
    <string name="to_store_then_invite">进入地点才能邀请！</string>
    <string name="load_more">加载更多</string>
    <string name="no_signature">这个用户很懒，什么都没留下~</string>
    <string name="unknow">未知</string>
    <string name="meet">见面</string>
    <string name="explore">探索</string>
    <string name="search_meet_place">搜索见面地点</string>
</resources>
