<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_goods_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/goods"
            android:textColor="@color/colorGray_6"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_goods_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/image"
            android:src="@color/colorGray_e" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_goods_num_move"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/icon"
            android:src="@color/colorGray_e" />

        <TextView
            android:id="@+id/tv_goods_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/_0"
            android:textColor="@color/colorGray_6"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/img_goods_num_add"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/icon"
            android:src="@color/colorGray_e" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sum"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_goods_sum_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/_20_yuan"
            android:textColor="@color/colorGray_6"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>
