<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="110dp"
    android:layout_height="110dp"
    android:background="@drawable/click_bg"
    android:gravity="center_horizontal"
    android:padding="5dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_goods"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/image"
        android:src="@color/colorGray_e" />

    <TextView
        android:id="@+id/tv_goods_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center"
        android:lines="1"
        android:text="@string/beef_noodles"
        android:textColor="@color/colorGray_5"
        android:textSize="11sp"
        tools:ignore="SmallSp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_goods_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:padding="1dp"
            android:text="@string/_10_yuan"
            android:textColor="@color/colorPrice"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_goods_price_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="1dp"
            android:text="@string/_20_yuan"
            android:textColor="@color/colorGray_9"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

    </LinearLayout>
</LinearLayout>
