<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_edit_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_zoneCode"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/plus_86"
            android:textColor="@color/colorP1"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:background="@color/colorP1" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorClarity"
            android:hint="@string/please_enter_phone_number"
            android:inputType="phone"
            android:padding="5dp"
            android:textColor="@color/colorGray_5"
            android:textSize="14sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_next_agree"
            android:textColor="@color/colorGray_7"
            android:textSize="10.5sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_user_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_user_protocol"
            android:textColor="@color/colorP1"
            android:textSize="10.5sp"
            tools:ignore="SmallSp" />

    </LinearLayout>


</LinearLayout>
