<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_edit_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <EditText
            android:id="@+id/et_sms_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorClarity"
            android:hint="@string/please_input_sms_code"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/colorGray_5"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:background="@color/colorP1" />

        <TextView
            android:id="@+id/tv_get_sms_code"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/get_sms_code"
            android:textColor="@color/colorP1"
            android:textSize="14sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tv_use_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/use_password_login"
            android:textColor="@color/colorP1"
            android:textSize="10.5sp"
            tools:ignore="SmallSp" />
    </FrameLayout>


    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_cannot_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cannot_login"
            android:textColor="@color/colorP1"
            android:textSize="10.5sp"
            tools:ignore="SmallSp" />

    </FrameLayout>

</LinearLayout>
